--- a/locale/fr_FR/LC_MESSAGES/messages.po
+++ b/locale/fr_FR/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Poweradmin 4.0.0\n"
 "Report-Msgid-Bugs-To: edmondas@girkantas.lt\n"
-"POT-Creation-Date: 2025-04-11 08:40+0300\n"
+"POT-Creation-Date: 2025-04-11 10:36+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1840,7 +1840,8 @@ msgstr "Commandes de base de données"
 
 #: install/templates/step6.html.twig:21
 msgid "Execute the following commands based on your database:"
-msgstr "Exécutez les commandes suivantes en fonction de votre base de données :"
+msgstr ""
+"Exécutez les commandes suivantes en fonction de votre base de données :"
 
 #: install/templates/step6.html.twig:26
 msgid ""
@@ -1866,7 +1867,7 @@ msgstr "Continuer vers l'étape"
 
 #: install/templates/base.html.twig:29
 msgid "Installation step"
-msgstr "Installation step"
+msgstr "Étape d'installation"
 
 #: install/templates/step7.html.twig:3 install/templates/step7.html.twig:8
 msgid "Create configuration file"
@@ -1939,7 +1940,8 @@ msgstr "Fournir le nom d'utilisateur"
 
 #: install/templates/step4.html.twig:44
 msgid "Database username with administrative rights."
-msgstr "Nom d'utilisateur de la base de données avec des droits administratifs."
+msgstr ""
+"Nom d'utilisateur de la base de données avec des droits administratifs."
 
 #: install/templates/step4.html.twig:58
 msgid "Password for this database user."
@@ -1987,7 +1989,9 @@ msgstr "Chemin complet vers le fichier de base de données SQLite"
 
 #: install/templates/step4.html.twig:96
 msgid "File must exist with web server read/write access. Use absolute path."
-msgstr "Le fichier doit exister avec un accès en lecture/écriture pour le serveur web. Utilisez un chemin absolu."
+msgstr ""
+"Le fichier doit exister avec un accès en lecture/écriture pour le serveur "
+"web. Utilisez un chemin absolu."
 
 #: install/templates/step4.html.twig:104
 msgid "DB charset"
@@ -1999,7 +2003,9 @@ msgstr "Utiliser la valeur par défaut"
 
 #: install/templates/step4.html.twig:111
 msgid "Charset for new tables. Leave empty for database default."
-msgstr "Jeu de caractères pour les nouvelles tables. Laissez vide pour la valeur par défaut de la base de données."
+msgstr ""
+"Jeu de caractères pour les nouvelles tables. Laissez vide pour la valeur par "
+"défaut de la base de données."
 
 #: install/templates/step4.html.twig:116
 msgid "DB collation"
@@ -2043,7 +2049,9 @@ msgstr "Vérification des Prérequis :"
 
 #: install/templates/step2.html.twig:12
 msgid "Verifying that your server meets all requirements to run Poweradmin."
-msgstr "Vérification que votre serveur répond à toutes les conditions pour exécuter Poweradmin."
+msgstr ""
+"Vérification que votre serveur répond à toutes les conditions pour exécuter "
+"Poweradmin."
 
 #: install/templates/step2.html.twig:20
 msgid "PHP Version"
@@ -2107,7 +2115,9 @@ msgstr "Configuration :"
 
 #: install/templates/step5.html.twig:12
 msgid "Now we will gather all details for the configuration itself."
-msgstr "Nous allons maintenant recueillir tous les détails pour la configuration elle-même."
+msgstr ""
+"Nous allons maintenant recueillir tous les détails pour la configuration "
+"elle-même."
 
 #: install/templates/step5.html.twig:21
 msgid "Database User"
@@ -2217,7 +2227,8 @@ msgstr "Installation terminée !"
 
 #: install/templates/step8.html.twig:12
 msgid "Congratulations! Your Poweradmin installation is now configured."
-msgstr "Félicitations ! Votre installation Poweradmin est maintenant configurée."
+msgstr ""
+"Félicitations ! Votre installation Poweradmin est maintenant configurée."
 
 #: install/templates/step8.html.twig:16
 msgid "Important Security Notice:"
@@ -2280,8 +2291,9 @@ msgid ""
 "PowerDNS is a DNS server that stores its data in an SQL database. Poweradmin "
 "will help you manage this database via a web interface."
 msgstr ""
-"PowerDNS is a DNS server that stores its data in an SQL database. Poweradmin "
-"will help you manage this database via a web interface."
+"PowerDNS est un serveur DNS qui stocke ses données dans une base de données "
+"SQL. Poweradmin vous aidera à gérer cette base de données via une interface "
+"web."
 
 #: install/templates/step3.html.twig:21
 msgid "Before proceeding, you should have:"
@@ -2293,7 +2305,9 @@ msgstr "Une installation PowerDNS opérationnelle"
 
 #: install/templates/step3.html.twig:24
 msgid "Database connectivity details (hostname, username, password)"
-msgstr "Database connectivity details (hostname, username, password)"
+msgstr ""
+"Détails de connexion à la base de données (nom d'hôte, nom d'utilisateur, "
+"mot de passe)"
 
 #: install/templates/step3.html.twig:25
 msgid "Administrative access to your database"
@@ -2394,3 +2408,5 @@ msgid ""
 msgstr ""
 "No configuration file found. Please create the config/settings.php file "
 "before proceeding."
+
+
