--- a/locale/pl_PL/LC_MESSAGES/messages.po
+++ b/locale/pl_PL/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Poweradmin 4.0.0\n"
 "Report-Msgid-Bugs-To: edmondas@girkantas.lt\n"
-"POT-Creation-Date: 2025-04-11 08:40+0300\n"
+"POT-Creation-Date: 2025-04-11 10:36+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1866,7 +1866,7 @@ msgstr "Przejdź do kroku"
 
 #: install/templates/base.html.twig:29
 msgid "Installation step"
-msgstr "Installation step"
+msgstr "Krok instalacji"
 
 #: install/templates/step7.html.twig:3 install/templates/step7.html.twig:8
 msgid "Create configuration file"
@@ -1987,7 +1987,9 @@ msgstr "Pełna ścieżka do pliku bazy danych SQLite"
 
 #: install/templates/step4.html.twig:96
 msgid "File must exist with web server read/write access. Use absolute path."
-msgstr "Plik musi istnieć z dostępem do odczytu/zapisu dla serwera WWW. Użyj ścieżki bezwzględnej."
+msgstr ""
+"Plik musi istnieć z dostępem do odczytu/zapisu dla serwera WWW. Użyj ścieżki "
+"bezwzględnej."
 
 #: install/templates/step4.html.twig:104
 msgid "DB charset"
@@ -1999,7 +2001,9 @@ msgstr "Użyj domyślnego"
 
 #: install/templates/step4.html.twig:111
 msgid "Charset for new tables. Leave empty for database default."
-msgstr "Zestaw znaków dla nowych tabel. Pozostaw puste dla domyślnych ustawień bazy danych."
+msgstr ""
+"Zestaw znaków dla nowych tabel. Pozostaw puste dla domyślnych ustawień bazy "
+"danych."
 
 #: install/templates/step4.html.twig:116
 msgid "DB collation"
@@ -2043,7 +2047,9 @@ msgstr "Sprawdzanie Wymagań:"
 
 #: install/templates/step2.html.twig:12
 msgid "Verifying that your server meets all requirements to run Poweradmin."
-msgstr "Weryfikacja, czy serwer spełnia wszystkie wymagania do uruchomienia Poweradmin."
+msgstr ""
+"Weryfikacja, czy serwer spełnia wszystkie wymagania do uruchomienia "
+"Poweradmin."
 
 #: install/templates/step2.html.twig:20
 msgid "PHP Version"
@@ -2280,8 +2286,9 @@ msgid ""
 "PowerDNS is a DNS server that stores its data in an SQL database. Poweradmin "
 "will help you manage this database via a web interface."
 msgstr ""
-"PowerDNS is a DNS server that stores its data in an SQL database. Poweradmin "
-"will help you manage this database via a web interface."
+"PowerDNS to serwer DNS, który przechowuje swoje dane w bazie danych SQL. "
+"Poweradmin pomoże zarządzać tą bazą danych za pośrednictwem interfejsu "
+"internetowego."
 
 #: install/templates/step3.html.twig:21
 msgid "Before proceeding, you should have:"
@@ -2293,7 +2300,7 @@ msgstr "Działającą instalację PowerDNS"
 
 #: install/templates/step3.html.twig:24
 msgid "Database connectivity details (hostname, username, password)"
-msgstr "Database connectivity details (hostname, username, password)"
+msgstr "Dane połączenia z bazą danych (nazwa hosta, nazwa użytkownika, hasło)"
 
 #: install/templates/step3.html.twig:25
 msgid "Administrative access to your database"
@@ -2394,3 +2401,5 @@ msgid ""
 msgstr ""
 "No configuration file found. Please create the config/settings.php file "
 "before proceeding."
+
+
