--- a/locale/ja_JP/LC_MESSAGES/messages.po
+++ b/locale/ja_JP/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Poweradmin 4.0.0\n"
 "Report-Msgid-Bugs-To: edmondas@girkantas.lt\n"
-"POT-Creation-Date: 2025-04-11 10:36+0300\n"
+"POT-Creation-Date: 2025-04-11 18:23+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -44,9 +44,7 @@ msgstr ""
 msgid ""
 "Default session encryption key is used, please set it in your configuration "
 "file."
-msgstr ""
-"Default session encryption key is used, please set it in your configuration "
-"file."
+msgstr "デフォルトのセッション暗号化キーが使用されています。設定ファイルで設定してください。"
 
 #: lib/Application/Presenter/PaginationPresenter.php:52
 #: templates/search.html:135 templates/search.html:252
@@ -106,9 +104,7 @@ msgstr "The record has been deleted successfully."
 msgid ""
 "The record was deleted but the comment was preserved because similar records "
 "exist."
-msgstr ""
-"The record was deleted but the comment was preserved because similar records "
-"exist."
+msgstr "レコードは削除されましたが、類似のレコードが存在するためコメントは保持されました。"
 
 #: lib/Domain/Model/ZoneTemplate.php:398 lib/Domain/Service/DnsRecord.php:393
 msgid "You do not have the permission to edit this record."
@@ -205,8 +201,7 @@ msgstr "Zone has been unsigned successfully."
 
 #: lib/Domain/Model/ZoneTemplate.php:138 lib/Domain/Model/ZoneTemplate.php:593
 msgid "Zone template with this name already exists, please choose another one."
-msgstr ""
-"Zone template with this name already exists, please choose another one."
+msgstr "この名前のゾーンテンプレートは既に存在します。別の名前を選択してください。"
 
 #: lib/Application/Controller/EditController.php:401
 msgid "Template name can't be an empty string."
@@ -276,17 +271,13 @@ msgstr "You do not have the permission to access the migrations."
 msgid ""
 "Old migrations table detected. Please remove the `migrations` table before "
 "proceeding."
-msgstr ""
-"Old migrations table detected. Please remove the `migrations` table before "
-"proceeding."
+msgstr "古い移行テーブルが検出されました。続行する前に`migrations`テーブルを削除してください。"
 
 #: lib/Application/Controller/MigrationsController.php:49
 msgid ""
 "Database access check failed. Please ensure the current database user has "
 "the necessary permissions to create and alter tables."
-msgstr ""
-"Database access check failed. Please ensure the current database user has "
-"the necessary permissions to create and alter tables."
+msgstr "データベースアクセスチェックに失敗しました。現在のデータベースユーザーがテーブルを作成および変更するために必要な権限を持っていることを確認してください。"
 
 #: lib/Domain/Service/DnsRecord.php:795
 msgid "You do not have the permission to add a master zone."
@@ -412,9 +403,7 @@ msgstr "The record has been updated successfully."
 msgid ""
 "LDAP users cannot change their password here. Please contact your "
 "administrator."
-msgstr ""
-"LDAP users cannot change their password here. Please contact your "
-"administrator."
+msgstr "LDAPユーザーはここでパスワードを変更できません。管理者にお問い合わせください。"
 
 #: lib/Application/Controller/DnssecAddKeyController.php:101
 msgid "Zone key has been added successfully."
@@ -522,9 +511,7 @@ msgstr "An empty password is not allowed"
 msgid ""
 "Failed to call function exec. Make sure that exec is not listed in "
 "disable_functions at php.ini"
-msgstr ""
-"Failed to call function exec. Make sure that exec is not listed in "
-"disable_functions at php.ini"
+msgstr "関数execの呼び出しに失敗しました。php.iniのdisable_functionsにexecがリストされていないことを確認してください。"
 
 #: lib/Infrastructure/Service/PdnsUtilProvider.php:56
 msgid "Failed to call pdnssec utility."
@@ -633,20 +620,17 @@ msgstr "Add quotes around TXT record content."
 #: lib/Domain/Service/Dns.php:607
 msgid ""
 "This is not a valid CNAME. Did you assign an MX or NS record to the record?"
-msgstr ""
-"This is not a valid CNAME. Did you assign an MX or NS record to the record?"
+msgstr "これは有効なCNAMEではありません。MXまたはNSレコードをこのレコードに割り当てましたか？"
 
 #: lib/Domain/Service/Dns.php:636
 msgid ""
 "This is not a valid record. There is already exists a CNAME with this name."
-msgstr ""
-"This is not a valid record. There is already exists a CNAME with this name."
+msgstr "これは有効なレコードではありません。この名前のCNAMEが既に存在します。"
 
 #: lib/Domain/Service/Dns.php:663
 msgid ""
 "This is not a valid CNAME. There already exists a record with this name."
-msgstr ""
-"This is not a valid CNAME. There already exists a record with this name."
+msgstr "これは有効なCNAMEではありません。この名前のレコードが既に存在します。"
 
 #: lib/Domain/Service/Dns.php:683
 msgid "Empty CNAME records are not allowed."
@@ -656,9 +640,7 @@ msgstr "Empty CNAME records are not allowed."
 msgid ""
 "You can not point a NS or MX record to a CNAME record. Remove or rename the "
 "CNAME record first, or take another name."
-msgstr ""
-"You can not point a NS or MX record to a CNAME record. Remove or rename the "
-"CNAME record first, or take another name."
+msgstr "NSまたはMXレコードをCNAMEレコードに向けることはできません。最初にCNAMEレコードを削除するか名前を変更するか、別の名前を使用してください。"
 
 #: lib/Domain/Service/Dns.php:735
 msgid "Invalid value for content field of HINFO record."
@@ -668,9 +650,7 @@ msgstr "Invalid value for content field of HINFO record."
 msgid ""
 "Invalid value for name field of SOA record. It should be the name of the "
 "zone."
-msgstr ""
-"Invalid value for name field of SOA record. It should be the name of the "
-"zone."
+msgstr "SOAレコードの名前フィールドの値が無効です。ゾーンの名前である必要があります。"
 
 #: lib/Domain/Service/Dns.php:863
 msgid "Invalid service value in name field of SRV record."
@@ -746,9 +726,7 @@ msgstr "There is already a supermaster with this IP address and hostname."
 msgid ""
 "You are trying to delete the SOA record. You are not allowed to remove it, "
 "unless you remove the entire zone."
-msgstr ""
-"You are trying to delete the SOA record. You are not allowed to remove it, "
-"unless you remove the entire zone."
+msgstr "SOAレコードを削除しようとしています。ゾーン全体を削除しない限り、削除することはできません。"
 
 #: lib/Domain/Service/DnsRecord.php:790 lib/Domain/Service/DnsRecord.php:1404
 #, php-format
@@ -1039,9 +1017,7 @@ msgstr "Delete user"
 msgid ""
 "You are about to delete a user. This user is owner for a number of zones. "
 "Please decide what to do with these zones."
-msgstr ""
-"You are about to delete a user. This user is owner for a number of zones. "
-"Please decide what to do with these zones."
+msgstr "ユーザーを削除しようとしています。このユーザーは複数のゾーンの所有者です。これらのゾーンをどうするか決めてください。"
 
 #: templates/delete_user.html:22
 msgid "Zone"
@@ -1337,9 +1313,7 @@ msgstr "Examples:"
 msgid ""
 "To add a subdomain foo in a zone template you would put foo.[ZONE] into the "
 "name field."
-msgstr ""
-"To add a subdomain foo in a zone template you would put foo.[ZONE] into the "
-"name field."
+msgstr "ゾーンテンプレートにサブドメインfooを追加するには、名前フィールドにfoo.[ZONE]と入力します。"
 
 #: templates/add_zone_templ_record.html:78 templates/edit_zone_templ.html:94
 msgid "To add a wildcard record put *.[ZONE] in the name field."
@@ -1353,9 +1327,7 @@ msgstr "Use just [ZONE] to have the domain itself return a value."
 msgid ""
 "For the SOA record, place [NS1] [HOSTMASTER] [SERIAL] 28800 7200 604800 "
 "86400 in the content field."
-msgstr ""
-"For the SOA record, place [NS1] [HOSTMASTER] [SERIAL] 28800 7200 604800 "
-"86400 in the content field."
+msgstr "SOAレコードの場合、コンテンツフィールドに[NS1] [HOSTMASTER] [SERIAL] 28800 7200 604800 86400を配置します。"
 
 #: templates/delete_perm_templ.html:10
 msgid "Delete permission template"
@@ -1463,8 +1435,7 @@ msgstr "Delete record in zone"
 
 #: templates/delete_record.html:47
 msgid "You are trying to delete a record that is needed for this zone to work."
-msgstr ""
-"You are trying to delete a record that is needed for this zone to work."
+msgstr "このゾーンの動作に必要なレコードを削除しようとしています。"
 
 #: templates/add_user.html:60 install/templates/step4.html.twig:54
 msgid "Provide user password"
@@ -1588,21 +1559,14 @@ msgid ""
 "supermaster. Deleting the zone now, will result in temporary removal only. "
 "Whenever the supermaster sends a notification for this zone, it will be "
 "added again!"
-msgstr ""
-"You are about to delete a slave zone of which the master nameserver is a "
-"supermaster. Deleting the zone now, will result in temporary removal only. "
-"Whenever the supermaster sends a notification for this zone, it will be "
-"added again!"
+msgstr "マスターネームサーバーがスーパーマスターであるスレーブゾーンを削除しようとしています。今ゾーンを削除すると、一時的な削除のみになります。スーパーマスターがこのゾーンの通知を送信するたびに、再び追加されます！"
 
 #: templates/search.html:9
 msgid ""
 "Enter a hostname or IP address. SQL LIKE syntax supported: an underscore (_) "
 "in pattern matches any single character, a percent sign (%) matches any "
 "string of zero or more characters."
-msgstr ""
-"Enter a hostname or IP address. SQL LIKE syntax supported: an underscore (_) "
-"in pattern matches any single character, a percent sign (%) matches any "
-"string of zero or more characters."
+msgstr "ホスト名またはIPアドレスを入力してください。SQL LIKE構文がサポートされています：パターン内のアンダースコア（_）は任意の単一文字に一致し、パーセント記号（%）は0文字以上の任意の文字列に一致します。"
 
 #: templates/search.html:27
 msgid "Provide a keyword for your search"
@@ -1829,10 +1793,7 @@ msgid ""
 "You now want to give limited rights to Poweradmin so it can update the data "
 "in the tables. To do this, you should create a new user and give it rights "
 "to select, delete, insert, and update records in the PowerDNS database."
-msgstr ""
-"You now want to give limited rights to Poweradmin so it can update the data "
-"in the tables. To do this, you should create a new user and give it rights "
-"to select, delete, insert, and update records in the PowerDNS database."
+msgstr "Poweradminがテーブル内のデータを更新できるように制限された権限を与えたいと思います。そのためには、新しいユーザーを作成し、PowerDNSデータベース内のレコードを選択、削除、挿入、更新する権限を与える必要があります。"
 
 #: install/templates/step6.html.twig:18
 msgid "Database Commands"
@@ -1845,8 +1806,7 @@ msgstr "データベースに応じて以下のコマンドを実行してくだ
 #: install/templates/step6.html.twig:26
 msgid ""
 "After you have added the new user, proceed with this installation procedure."
-msgstr ""
-"After you have added the new user, proceed with this installation procedure."
+msgstr "新しいユーザーを追加した後、このインストール手順を続行してください。"
 
 #: install/templates/step3.html.twig:44
 msgid "Note:"
@@ -1856,11 +1816,9 @@ msgstr "注意："
 msgid ""
 "Since you are using SQLite, there is no need to create a new user with "
 "limited rights."
-msgstr ""
-"Since you are using SQLite, there is no need to create a new user with "
-"limited rights."
+msgstr "SQLiteを使用しているため、制限された権限を持つ新しいユーザーを作成する必要はありません。"
 
-#: install/templates/step5.html.twig:133 install/templates/step3.html.twig:55
+#: install/templates/step5.html.twig:134 install/templates/step3.html.twig:56
 msgid "Continue to step"
 msgstr "次のステップに進む"
 
@@ -1895,7 +1853,7 @@ msgstr "Choose a language for installation"
 #: install/templates/step1.html.twig:12
 msgid ""
 "Please select your preferred language to continue with the installation:"
-msgstr ""
+msgstr "インストールを続行するために希望の言語を選択してください："
 
 #: install/templates/step1.html.twig:196
 msgid "Begin Installation"
@@ -1917,9 +1875,7 @@ msgstr "データベース準備："
 msgid ""
 "The installer needs to modify the PowerDNS database with tables for "
 "Poweradmin. Use an account with sufficient rights (like root) to proceed."
-msgstr ""
-"The installer needs to modify the PowerDNS database with tables for "
-"Poweradmin. Use an account with sufficient rights (like root) to proceed."
+msgstr "インストーラーはPoweradmin用のテーブルでPowerDNSデータベースを変更する必要があります。十分な権限（rootなど）を持つアカウントを使用して続行してください。"
 
 #: install/templates/step4.html.twig:20
 msgid "Database Settings"
@@ -1987,23 +1943,19 @@ msgstr "SQLiteデータベースファイルへの完全パス"
 
 #: install/templates/step4.html.twig:96
 msgid "File must exist with web server read/write access. Use absolute path."
-msgstr ""
-"ファイルはWebサーバーの読み書きアクセス権で存在する必要があります。絶対パスを"
-"使用してください。"
+msgstr "ファイルはWebサーバーの読み書きアクセス権で存在する必要があります。絶対パスを使用してください。"
 
 #: install/templates/step4.html.twig:104
 msgid "DB charset"
 msgstr "DB文字セット"
 
-#: install/templates/step4.html.twig:178 install/templates/step4.html.twig:186
+#: install/templates/step4.html.twig:180 install/templates/step4.html.twig:188
 msgid "Use default"
 msgstr "デフォルトを使用"
 
 #: install/templates/step4.html.twig:111
 msgid "Charset for new tables. Leave empty for database default."
-msgstr ""
-"新しいテーブルの文字セット。データベースのデフォルトを使用する場合は空のまま"
-"にしてください。"
+msgstr "新しいテーブルの文字セット。データベースのデフォルトを使用する場合は空のままにしてください。"
 
 #: install/templates/step4.html.twig:116
 msgid "DB collation"
@@ -2012,8 +1964,7 @@ msgstr "DB照合順序"
 #: install/templates/step4.html.twig:123
 msgid ""
 "Collation rules for character comparison. Leave empty for database default."
-msgstr ""
-"Collation rules for character comparison. Leave empty for database default."
+msgstr "文字比較の照合規則。データベースのデフォルトを使用する場合は空のままにしてください。"
 
 #: install/templates/step4.html.twig:131
 msgid "Administrator Account"
@@ -2030,8 +1981,7 @@ msgstr "パスワードを提供してください"
 #: install/templates/step4.html.twig:145
 msgid ""
 "Password for \"admin\" username with full rights to the Poweradmin interface."
-msgstr ""
-"Password for \"admin\" username with full rights to the Poweradmin interface."
+msgstr "Poweradminインターフェースに対する完全な権限を持つ「admin」ユーザー名のパスワード。"
 
 #: install/templates/step2.html.twig:3
 msgid "System Requirements"
@@ -2047,9 +1997,7 @@ msgstr "要件チェック："
 
 #: install/templates/step2.html.twig:12
 msgid "Verifying that your server meets all requirements to run Poweradmin."
-msgstr ""
-"サーバーがPoweradminを実行するための全ての要件を満たしていることを確認してい"
-"ます。"
+msgstr "サーバーがPoweradminを実行するための全ての要件を満たしていることを確認しています。"
 
 #: install/templates/step2.html.twig:20
 msgid "PHP Version"
@@ -2087,15 +2035,15 @@ msgstr "必要なコンポーネントはすべて利用可能です。"
 msgid "You can continue with the installation."
 msgstr "インストールを続行できます。"
 
-#: install/templates/step2.html.twig:111
+#: install/templates/step2.html.twig:113
 msgid "Some required components are missing."
 msgstr "いくつかの必要なコンポーネントが不足しています。"
 
-#: install/templates/step2.html.twig:112
+#: install/templates/step2.html.twig:114
 msgid "Please install the missing components before continuing."
 msgstr "続行する前に不足しているコンポーネントをインストールしてください。"
 
-#: install/templates/step2.html.twig:116
+#: install/templates/step2.html.twig:118
 msgid "Check Again"
 msgstr "再度チェック"
 
@@ -2122,8 +2070,7 @@ msgstr "データベースユーザー"
 #: install/templates/step5.html.twig:31
 msgid ""
 "Poweradmin database username with restricted access. Not for web UI login."
-msgstr ""
-"Poweradmin database username with restricted access. Not for web UI login."
+msgstr "制限されたアクセス権を持つPoweradminデータベースのユーザー名。ウェブUIログイン用ではありません。"
 
 #: install/templates/step5.html.twig:41
 msgid "Provide the user password"
@@ -2149,9 +2096,7 @@ msgstr "DNSホストマスターを提供してください"
 msgid ""
 "When creating SOA records and no hostmaster is provided, this value here "
 "will be used."
-msgstr ""
-"When creating SOA records and no hostmaster is provided, this value here "
-"will be used."
+msgstr "SOAレコードを作成し、ホストマスターが提供されていない場合、ここの値が使用されます。"
 
 #: install/templates/step5.html.twig:70
 msgid "Primary nameserver"
@@ -2165,9 +2110,7 @@ msgstr "プライマリネームサーバーを提供してください"
 msgid ""
 "When creating new zones using the template, this value will be used as "
 "primary nameserver."
-msgstr ""
-"When creating new zones using the template, this value will be used as "
-"primary nameserver."
+msgstr "テンプレートを使用して新しいゾーンを作成する場合、この値がプライマリネームサーバーとして使用されます。"
 
 #: install/templates/step5.html.twig:82
 msgid "Secondary nameserver"
@@ -2181,9 +2124,7 @@ msgstr "セカンダリネームサーバーを提供してください"
 msgid ""
 "When creating new zones using the template, this value will be used as "
 "secondary nameserver."
-msgstr ""
-"When creating new zones using the template, this value will be used as "
-"secondary nameserver."
+msgstr "テンプレートを使用して新しいゾーンを作成する場合、この値がセカンダリネームサーバーとして使用されます。"
 
 #: install/templates/step5.html.twig:95
 msgid "Tertiary Nameserver"
@@ -2197,9 +2138,7 @@ msgstr "任意"
 msgid ""
 "When creating new zones using the template, this optional value will be used "
 "as tertiary nameserver."
-msgstr ""
-"When creating new zones using the template, this optional value will be used "
-"as tertiary nameserver."
+msgstr "テンプレートを使用して新しいゾーンを作成する場合、このオプション値は第三のネームサーバーとして使用されます。"
 
 #: install/templates/step5.html.twig:108
 msgid "Quaternary Nameserver"
@@ -2209,9 +2148,7 @@ msgstr "第四ネームサーバー"
 msgid ""
 "When creating new zones using the template, this optional value will be used "
 "as quaternary nameserver."
-msgstr ""
-"When creating new zones using the template, this optional value will be used "
-"as quaternary nameserver."
+msgstr "テンプレートを使用して新しいゾーンを作成する場合、このオプション値は第四のネームサーバーとして使用されます。"
 
 #: install/templates/step8.html.twig:3 install/templates/step8.html.twig:8
 msgid "Installation complete"
@@ -2241,9 +2178,7 @@ msgstr ""
 msgid ""
 "Poweradmin will not function if the install directory exists, as a security "
 "measure."
-msgstr ""
-"Poweradmin will not function if the install directory exists, as a security "
-"measure."
+msgstr "セキュリティ対策として、インストールディレクトリが存在する場合、Poweradminは機能しません。"
 
 #: install/templates/step8.html.twig:22
 msgid "Next Steps"
@@ -2285,9 +2220,7 @@ msgstr "PowerDNSについて"
 msgid ""
 "PowerDNS is a DNS server that stores its data in an SQL database. Poweradmin "
 "will help you manage this database via a web interface."
-msgstr ""
-"PowerDNSはSQLデータベースにデータを保存するDNSサーバーです。Poweradminはウェ"
-"ブインターフェースを通じてこのデータベースの管理を支援します。"
+msgstr "PowerDNSはSQLデータベースにデータを保存するDNSサーバーです。Poweradminはウェブインターフェースを通じてこのデータベースの管理を支援します。"
 
 #: install/templates/step3.html.twig:21
 msgid "Before proceeding, you should have:"
@@ -2353,9 +2286,7 @@ msgstr "Make sure the SQLite database file exists"
 msgid ""
 "Check that the web server has read and write permissions for the database "
 "file"
-msgstr ""
-"Check that the web server has read and write permissions for the database "
-"file"
+msgstr "Webサーバーがデータベースファイルに対する読み書き権限を持っていることを確認してください"
 
 #: install/helpers/InstallStepHandler.php:187
 msgid "Verify the full path to the database file is correct and accessible"
@@ -2366,23 +2297,19 @@ msgstr "Verify the full path to the database file is correct and accessible"
 msgid ""
 "The SQLite database file %s does not exist. Please create the database file "
 "before proceeding."
-msgstr ""
-"The SQLite database file %s does not exist. Please create the database file "
-"before proceeding."
+msgstr "SQLiteデータベースファイル %s が存在しません。続行する前にデータベースファイルを作成してください。"
 
 #: install/helpers/DatabaseHelper.php:96
 #, php-format
 msgid ""
 "The SQLite database file %s is not readable. Please check file permissions."
-msgstr ""
-"The SQLite database file %s is not readable. Please check file permissions."
+msgstr "SQLiteデータベースファイル %s は読み取り可能ではありません。ファイルの権限を確認してください。"
 
 #: install/helpers/DatabaseHelper.php:104
 #, php-format
 msgid ""
 "The SQLite database file %s is not writable. Please check file permissions."
-msgstr ""
-"The SQLite database file %s is not writable. Please check file permissions."
+msgstr "SQLiteデータベースファイル %s は書き込み可能ではありません。ファイルの権限を確認してください。"
 
 #: install/helpers/DatabaseHelper.php:116
 #, php-format
@@ -2397,8 +2324,5 @@ msgstr "or"
 msgid ""
 "No configuration file found. Please create the config/settings.php file "
 "before proceeding."
-msgstr ""
-"No configuration file found. Please create the config/settings.php file "
-"before proceeding."
-
+msgstr "設定ファイルが見つかりません。続行する前にconfig/settings.phpファイルを作成してください。"
 
